Fix publication year overlap

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -668,6 +668,16 @@ footer.sticky-bottom {
     text-align: right;
   }
 
+  h2.bibliography + ol.bibliography > li:first-child {
+    padding-right: 5rem;
+  }
+
+  @media (max-width: 576px) {
+    h2.bibliography + ol.bibliography > li:first-child {
+      padding-right: 0;
+    }
+  }
+
   ol.bibliography {
     list-style: none;
     padding: 0;
